--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -53,6 +53,8 @@
     {% leaflet_js %}
     {% leaflet_css %}
 
+    <script src={% static "leaflet/Control.MiniMap.js" %}></script>
+    <link rel="stylesheet" href={% static "leaflet/Control.MiniMap.css" %}>
 
     <link rel="stylesheet" href={% static "tigacrafting/tigacrafting_style.css" %}>
 
